--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
+layout: single
+title: "Home"
+classes: wide
 author_profile: true
 ---
+
+<section id="home">
+# Welcome
+This is my homepage.
+</section>
+
+<section id="bio">
+# Bio
+I am a researcher in...
+</section>
+
+<section id="publications">
+# Publications
+- Paper A
+- Paper B
+</section>
+
+<section id="awards">
+# Honors & Awards
+- Award A
+- Award B
+</section>
